--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "matise-assets": "^1.1.10",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
