--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "nuxt": "^1.0.0"
+    "matise-assets": "^1.1.10",
+    "node-sass": "^4.9.0",
+    "nuxt": "^1.0.0",
+    "postcss-loader": "^2.1.5",
+    "sass-loader": "^7.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
